<resources>
    <string name="app_name">Login Application</string>

    <string name="login_bottom_text">Powered by APPstand</string>
    <string name="login_login">Login</string>
    <string name="login_mania">Mania</string>
    <string name="login_sign_up">Sign up</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_password">Password</string>
    <string name="login_username">Username</string>
    <string name="login_get_to_account">To get to your account!</string>
</resources>