<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_weight="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/dp_16"
                android:paddingTop="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_8">

                <TextView
                    android:id="@+id/loginTitleLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/login_login"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:textColor="?attr/colorOnSecondary"
                    app:layout_constraintEnd_toStartOf="@id/loginTitleMania"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/loginTitleMania"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/login_mania"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:textColor="?attr/colorSecondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/loginTitleLogin"
                    app:layout_constraintTop_toTopOf="@id/loginTitleLogin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginView"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/getToYourAccount"
                    android:layout_marginBottom="@dimen/dp_2"
                    android:text="@string/login_login"
                    android:textColor="?attr/colorPrimary"/>
                
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/getToYourAccount"
                    android:textColor="?attr/colorOnSurface"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/usernameLayout"
                    android:text="@string/login_get_to_account"
                    android:layout_marginBottom="@dimen/dp_4"
                    android:textAppearance="?attr/textAppearanceSubtitle1"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:hint="@string/login_username"
                    app:layout_constraintBottom_toTopOf="@id/passwordLayout"
                    app:startIconDrawable="@drawable/ic_baseline_person">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usernameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:hint="@string/login_password"
                    app:layout_constraintBottom_toBottomOf="@id/forgot_password"
                    app:startIconDrawable="@drawable/baseline_lock_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/login_forgot_password"
                    android:textColor="?attr/colorSecondary"
                    app:layout_constraintBottom_toTopOf="@id/login_button"
                    app:layout_constraintEnd_toEndOf="parent" />


                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="?attr/colorAccent"
                    android:text="@string/login_login"
                    app:layout_constraintBottom_toTopOf="@+id/button_sign_up" />

                <Button
                    android:id="@+id/button_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_sign_up"
                    app:layout_MarginBottom="@dimen/dp_16"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_16"
            android:gravity="center"
            android:text="@string/login_bottom_text"
            android:textColor="?attr/colorPrimaryVariant" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>